--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.2
 Werkzeug==2.0.3
 pandas==1.3.4
-numpy==1.21.5  # Specify a compatible numpy version
+numpy==1.21.4  # Use a version that is compatible with Render's Python environment
 python-docx==0.8.11
 gunicorn==20.1.0
